backend/src/snapshots/twirl__test-2.snap
---
source: src/main.rs
---
Black spins from (0, 0) 1 tile CW... => Ok(None)
                                                                              
 [1m[96m↑[22m01[39m──┬───┬───┬───┬───┬───┬───┬───┐     ╶[1m[96m→[22m01[39m╶─┬───┬───┬───┬───┬───┬───┬───┐  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  └───┴───┴───┴───┴───┴───┴───┴───┘       └───┴───┴───┴───┴───┴───┴───┴───┘  
                                                                              
[0m  Black to spin...                      [0m  White to play...
