backend/src/snapshots/twirl__test-4.snap
---
source: src/main.rs
---
White spins from (0, 0) 1 tile CW... => Err(SpinDuringPlayPhase)
                                                                              
╶[1m[96m→[22m01[39m╶─┬───┬───┬───┬───┬───┬───┬───┐     ╶[1m[96m→[22m01[39m╶─┬───┬───┬───┬───┬───┬───┬───┐  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  └───┴───┴───┴───┴───┴───┴───┴───┘       └───┴───┴───┴───┴───┴───┴───┴───┘  
                                                                              
[0m  White to play...                      [0m  White to play...
