backend/src/snapshots/twirl__test-5.snap
---
source: src/main.rs
---
White plays at (0, 1)... => Ok(None)
                                                                              
╶[1m[96m→[22m01[39m╶─┬───┬───┬───┬───┬───┬───┬───┐     ╶[1m[96m→[22m01[39m╶[1m[93m↑[22m02[39m──┬───┬───┬───┬───┬───┬───┐  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  └───┴───┴───┴───┴───┴───┴───┴───┘       └───┴───┴───┴───┴───┴───┴───┴───┘  
                                                                              
[0m  White to play...                      [0m  White to spin...
