backend/src/snapshots/twirl__test-6.snap
---
source: src/main.rs
---
White spins from (0, 0) 5 tile CW... => Ok(None)
                                                          ╷                   
╶[1m[96m→[22m01[39m╶[1m[93m↑[22m02[39m──┬───┬───┬───┬───┬───┬───┐     ╶─┬───┬───┬───┬──[1m[96m↓[22m01[39m╶─┬───┬───┬───┐  
  │   │   │   │   │   │   │   │   │       │   │   │   │   ╷   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤     ╶─┼───┼───┼───┼──[1m[93m→[22m02[39m╶─┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤     ╶─┼───┼───┼───┼───┤ ╶─┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤     ╶─┼───┼───┼───┼───┤ ╶─┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤     ╶─┼───┼───┼───┼───┤ ╶─┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  ├───┼───┼───┼───┼───┼───┼───┼───┤       ├───┼───┼───┼───┼───┼───┼───┼───┤  
  │   │   │   │   │   │   │   │   │       │   │   │   │   │   │   │   │   │   
  └───┴───┴───┴───┴───┴───┴───┴───┘       └───┴───┴───┴───┴───┴───┴───┴───┘  
                                                                              
[0m  White to spin...                      [0m  Black to play...
